<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_Home"
        android:icon="@drawable/home"
        android:title="@string/Action_Home_Title" />
    <item
        android:id="@+id/action_Shorts"
        android:icon="@drawable/shorts"
        android:title="@string/Action_Shorts_Title" />
    <item
        android:id="@+id/action_Plus"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="" />
    <item
        android:id="@+id/action_Subscribe"
        android:icon="@drawable/subscribe"
        android:title="@string/Action_Subscribe_Title" />
    <item
        android:id="@+id/action_My"
        android:icon="@drawable/my_image"
        android:title="@string/Action_My_Title" />
</menu>